force-app/main/default/objects/portal_feed_item__c/portal_feed_item__c.object-meta.xml
<CustomObject>
    <label>portal feed item</label>
    <nameField>
        <displayFormat>fi-{000000}</displayFormat>
        <label>feed item number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>portal feed items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>