force-app/main/default/objects/portal_feed_item__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <type>DateTime</type>
</CustomField>