force-app/main/default/objects/portal_feed_item__c/fields/icon_3__c.field-meta.xml
<CustomField>
    <fullName>icon_3__c</fullName>
    <label>icon 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>