force-app/main/default/objects/portal_feed_item__c/fields/message_2__c.field-meta.xml
<CustomField>
    <fullName>message_2__c</fullName>
    <label>message 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>