force-app/main/default/objects/portal_feed_item__c/fields/record_id_1__c.field-meta.xml
<CustomField>
    <fullName>record_id_1__c</fullName>
    <label>record id 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>