force-app/main/default/objects/portal_feed_item__c/fields/SLA_active__c.field-meta.xml
<CustomField>
    <fullName>SLA_active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SLA active</label>
    <type>Checkbox</type>
</CustomField>