force-app/main/default/objects/portal_feed_item__c/fields/sourceArticle__c.field-meta.xml
<CustomField>
    <fullName>sourceArticle__c</fullName>
    <label>Article url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>