force-app/main/default/objects/portal_feed_item__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>action required</fullName>
            </value>
            <value>
                <fullName>announcement</fullName>
            </value>
            <value>
                <fullName>news</fullName>
            </value>
            <value>
                <fullName>event</fullName>
            </value>
            <value>
                <fullName>conversation</fullName>
            </value>
            <value>
                <fullName>competitive</fullName>
            </value>
            <value>
                <fullName>googlenews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>