force-app/main/default/objects/portal_feed_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>date__c</columns>
    <columns>type__c</columns>
    <columns>title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>